# rust-actix

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci-cd.yml
acceptance-test/: main.rs
acceptance-test/features/: products.feature
acceptance-test/steps/: mod.rs  products_steps.rs
performance-test/goose/: main.rs
src/: main.rs
src/clients/: mod.rs
src/clients/pokeapi/: pokeapi_client.rs
src/clients/pokeapi/dto/: mod.rs  pokedex_dto.rs  pokemon_entry_dto.rs  pokemon_specie_dto.rs
src/config/: banner.txt  config.rs
src/controllers/: health_controller.rs  mod.rs  pokemon_controller.rs  product_controller.rs
src/data/: productos.json  products.json
src/doc/: api_doc.rs
src/dtos/: characteristic_dto.rs  disk_space_dto.rs  health_response_dto.rs  mod.rs  product_dto.rs  ram_space_dto.rs
src/repositories/: product_repository.rs
src/routes/: health_route.rs  mod.rs  pokemon_route.rs  product_route.rs
src/services/: health_service.rs  mod.rs  pokemon_service.rs  product_service.rs
src/tests/: configuration_test.rs  health_controller_test.rs  mod.rs  pokemon_controller_test.rs  product_controller_test.rs
