[package]
name = "rust-actix"
description = "Aplicacion con rust y actix para servicios rest"
version = "1.0.0"
authors = ["Byron Villegas Moya"]
keywords = ["rust", "actix", "rest", "api"]
edition = "2021"
rust-version = "1.81.0"
repository = "https://github.com/byron-villegas/rust-actix"
readme = "README.md"
license-file = "LICENSE.txt"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.9.0"
cucumber = { version = "0.21", features = ["output-junit", "output-json"] }
env_logger = "0.11.5"
goose = "0.18.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sysinfo = "0.31.4"
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros"] }

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "cucumber"
path = "acceptance-test/main.rs"

[[bin]]
name = "goose"
path = "performance-test/goose/main.rs"